examples/ok/float_exponent.bina
// OK: float literals with exponent notation.
fn main() -> int {
    let a = 1e6;
    let b = 1E6;
    let c = 3e+8;
    let d = 2e-5;
    let e = 1.5e10;
    let f: float32 = 1.5e-10f32;
    let g: float64 = 1e6f64;
    let h: float32 = 2e-5;

    print(a);
    print(b);
    print(c);
    print(d);
    print(e);
    print(f);
    print(g);
    print(h);
    return 0;
}
