examples/fail/lexer/invalid_exponent_empty.bina
// EXPECT_LEXER_ERROR: invalid float exponent
fn main() -> int {
    let x = 1e;
    return 0;
}
